--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babelify": "^6.3.0",
     "director": "^1.2.8",
+    "express": "^4.13.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "todomvc-app-css": "^2.0.1"
