Replace my old style webserver.js with express.

--- a/public/react/tsconfig.json
+++ b/public/react/tsconfig.json
@@ -3,7 +3,7 @@
         "jsx": "react",
         "target": "es3",
         "noImplicitAny": false,
-        "outDir": "../../scripts",
+        "outDir": "../../public/scripts",
         "rootDir": "./",
         "sourceMap": true
     },
