Add webpack support. Yeah.

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -10,7 +10,9 @@
     "filesGlob": [
         "./*.ts"
     ],
-    "exclude": [],
+    "exclude": [
+      "node_modules/**/*.ts"
+    ],
     "files": [
         "app.ts"
     ]
