--- a/public/src/package.json
+++ b/public/src/package.json
@@ -7,9 +7,12 @@
     "babelify": "^6.3.0",
     "director": "^1.2.8",
     "express": "^4.13.3",
+    "marked": "^0.3.5",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "todomvc-app-css": "^2.0.1"
+    "todomvc-app-css": "^2.0.1",
+    "ts-loader": "^0.5.6",
+    "typescript": "^1.6.2"
   },
   "devDependencies": {},
   "scripts": {
