--- a/public/src/package.json
+++ b/public/src/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^0.14.0",
     "todomvc-app-css": "^2.0.1",
     "ts-loader": "^0.5.6",
-    "typescript": "^1.6.2"
+    "typescript": "^1.6.2",
+    "webpack": "^1.12.2"
   },
   "devDependencies": {},
   "scripts": {
