--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "target": "es3",
+        "target": "es5",
         "module": "commonjs",
         "noImplicitAny": false,
-        "outDir": "../../bin",
+        "outDir": "./",
         "rootDir": "./",
         "sourceMap": true
     },
@@ -11,7 +11,7 @@
         "./*.ts"
     ],
     "exclude": [
-      "node_modules/**/*.ts"
+        "node_modules/**/*.ts"
     ],
     "files": [
         "app.ts"
